--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,13 @@
 
 en:
   hello: "Hello world"
+  activerecord:
+    attributes:
+      event:
+        fromdate: "Event start date"
+    errors:
+      models:
+        event:
+          attributes:
+            fromdate:
+              blank: "is required"
